# CW5_SQL

./: .gitignore  README.md  classes_HH.py  data_base.py  main.py  pyproject.toml  queries.sql  utils.py
