[tool.poetry]
name = "cw5-sql"
version = "0.1.0"
description = ""
authors = ["Андрей Марчук <marchuk-8282@mail.ru>"]
readme = "README.md"
packages = [{include = "cw5_sql"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
